# aerich

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  README_RU.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pypi.yml  pytest.yml  python-package.yml  test.yml
aerich/: __init__.py  actions.py  cli.py  cli2.py  cliStudy.py  coder.py  embed.py  exceptions.py  inspectdb.py  migrate.py  models.py  output.py  typer_utils.py  utils.py  version.py
aerich/ddl/: __init__.py
aerich/ddl/mysql/: __init__.py
aerich/ddl/postgres/: __init__.py
aerich/ddl/sqlite/: __init__.py
aerich/inspect/: __init__.py  mysql.py  postgres.py  sqlite.py
aerich/inspectdb/: __init__.py  mysql.py  postgres.py  sqlite.py
alice/: __init__.py  cli.py  cmd.py  exceptions.py  migrate.py  utils.py
alice/backends/: __init__.py
alice/backends/mysql/: __init__.py
alice/ddl/: __init__.py
alice/ddl/mysql/: __init__.py
tests/: __init__.py  diff_models.py  models.py  models_second.py  new_models.py  old_models.py  test_backends.py  test_ddl.py  test_migrate.py  test_utils.py
tests/backends/mysql/: __init__.py  test_ddl.py  test_migrate.py
