[tool.poetry]
name = "aerich"
version = "0.6.0"
description = "A database migrations tool for Tortoise ORM."
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tortoise/aerich"
repository = "https://github.com/tortoise/aerich.git"
documentation = "https://github.com/tortoise/aerich"
keywords = ["migrate", "Tortoise-ORM", "mysql"]
packages = [
    { include = "aerich" }
]
include = ["CHANGELOG.md", "LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.7"
tortoise-orm = "^0.17.7"
click = "*"
asyncpg = { version = "*", optional = true }
asyncmy = { version = "*", optional = true }
ddlparse = "*"
dictdiffer = "*"
tomlkit = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-xdist = "*"
pytest-asyncio = "*"
bandit = "*"
pytest-mock = "*"
cryptography = "*"

[tool.poetry.extras]
asyncmy = ["asyncmy"]
asyncpg = ["asyncpg"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
aerich = "aerich.cli:main"
